--- a/uh/play/uhtime.html
+++ b/uh/play/uhtime.html
@@ -2,13 +2,16 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>SDN 1 KANDANGAN KOTA - Ulangan Harian Kelas 6</title>
+<title>SDN 1 KANDANGAN KOTA</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
 .kop { text-align:center; margin-bottom:25px; border-bottom:3px double #000; padding-bottom:10px;}
 .kop img{width:80px;height:80px;margin-bottom:10px;}
-.kop h2,h4,p{margin:0;line-height:1.4;}
+.kop h2,p{margin:0;line-height:1.4;}
+.text-center{margin-bottom: 4px;}
+.text-center h4{margin-bottom: 0px;}
+.text-center p{margin-bottom: 6px;}
 .question-box{padding:15px;border:1px solid #ddd;border-radius:8px;margin-bottom:15px;background:#fff;}
 img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;object-fit:contain;}
 .mapel-disabled { color:#999; font-style:italic; }
@@ -33,18 +36,19 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
   <div class="alert alert-warning">
     <h5>📌 Petunjuk Pengerjaan:</h5>
     <ul>
-      <li>Pilih nama lengkap sebelum memulai.</li>
+      <li>Pilih nama lengkap sebelum mulai.</li>
       <li>Pilih mata pelajaran yang aktif untuk dikerjakan.</li>
-      <li>Mapel nonaktif akan berwarna redup dan tidak bisa dipilih.</li>
-      <li>Kerjakan dengan jujur tanpa bantuan orang lain.</li>
-      <li>Setiap mapel hanya bisa dikerjakan <b>1 kali</b>.</li>
+      <li>Kerjakan soal ulangan sesuai waktu yang ditentukan.</li>
+      <li>Pilih dan beri tanda jawaban yang benar dengan menekan check box dibawah setiap soal.</li>
+      <li>Kerjakan ulangan dengan jujur.</li>
+      <li>Ulangan hanya bisa dikerjakan <b>1 kali</b>.</li>
     </ul>
   </div>
 
   <div class="card p-4 shadow">
-    <h5>📝 Ulangan Siswa</h5>
+    <h5>📝 Data Peserta Ulangan</h5>
     <div class="mb-3">
-      <label>Nama Siswa/siswi</label>
+      <label>Nama Peserta</label>
       <select id="studentName" class="form-select">
         <option value="">-- Pilih Nama --</option>
       </select>
@@ -155,7 +159,7 @@ async function fetchSoal(){
 // Load soal
 async function loadQuestions(){
   const subject = document.getElementById("subjectSelect").value;
-  if(!subject || !currentName){ alert("Isi nama & pilih mapel!"); return; }
+  if(!subject || !currentName){ alert("Isi nama peserta & pilih mata pelajaran!"); return; }
 
   currentSubject = subject; // simpan mapel yang sedang dikerjakan
 
@@ -247,7 +251,7 @@ async function submitAnswers(){
     if(out.status==="error") alert(out.message || "Gagal simpan skor!");
   } catch(err){ console.error(err); }
 
-  document.getElementById("quizForm").innerHTML = "<div class='alert alert-success'>✅ Ulangan selesai. Terima kasih!</div>";
+  document.getElementById("quizForm").innerHTML = "<div class='alert alert-success'>✅ Ulangan selesai dikerjakan, semoga memperoleh skor yang diharapkan. Terima kasih!</div>";
   clearInterval(timerInterval);
 }
 
