--- a/uh/play/skortime.html
+++ b/uh/play/skortime.html
@@ -27,16 +27,23 @@
 
     <!-- Panel Rekap -->
     <div id="rekapPanel" class="d-none">
+      
+      <!-- Pengaturan Mapel Aktif di Pindah ke Atas -->
+      <h5 class="mt-2">⚙️ Pengaturan Mapel Aktif</h5>
+      <div id="mapelContent" class="mb-3"></div>
+
       <div class="mb-3">
         <button class="btn btn-success" onclick="fetchData()">🔄 Refresh Data</button>
-        <button class="btn btn-primary ms-2" onclick="downloadExcel()">📥 Unduh Excel</button>
+
+        <!-- Tombol diarahkan ke Google Sheets -->
+        <a href="https://docs.google.com/spreadsheets/d/1BSkTbK-qg_waTLY4QflKVCbR8AWu6Dn76zsDD_Le3-s/edit?gid=1785083120#gid=1785083120" 
+           target="_blank" 
+           class="btn btn-primary ms-2">
+          📊 Analisis Jawaban
+        </a>
       </div>
 
       <div id="rekapContent"></div>
-
-      <h5 class="mt-4">⚙️ Pengaturan Mapel Aktif</h5>
-      <div id="mapelContent" class="mb-3"></div>
-
       <div id="debugLog" class="mt-3 small text-muted"></div>
     </div>
   </div>
@@ -47,7 +54,7 @@ const ADMIN_PASSWORD = "12345";
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
 
 let hasil = [];
-let prevHasil = []; // untuk menyimpan snapshot lama
+let prevHasil = [];
 let mapelAktif = [];
 let autoRefreshInterval;
 
@@ -59,7 +66,6 @@ function loginAdmin(){
     fetchData();
     fetchMapel();
 
-    // auto-refresh 10 detik
     if(autoRefreshInterval) clearInterval(autoRefreshInterval);
     autoRefreshInterval = setInterval(()=>{
       fetchData();
@@ -104,7 +110,7 @@ async function fetchData(){
     }
 
     const newHasil = (Array.isArray(data.data) ? data.data : []).map(r => normalizeRow(r));
-    highlightChanges(hasil, newHasil); // cek perubahan
+    highlightChanges(hasil, newHasil);
     prevHasil = hasil;
     hasil = newHasil;
 
@@ -117,7 +123,6 @@ async function fetchData(){
 
 /* ---------------- Highlight Perubahan ---------------- */
 function highlightChanges(oldData, newData){
-  // buat map cepat: nama+mapel => skor lama
   const mapOld = {};
   oldData.forEach(r => { mapOld[r.nama+'__'+r.mapel] = r.skor; });
 
@@ -125,11 +130,10 @@ function highlightChanges(oldData, newData){
     const key = r.nama+'__'+r.mapel;
     const prevScore = mapOld[key];
     if(prevScore===undefined || prevScore!==r.skor){
-      // ada siswa baru atau skor berubah
       const rowEl = document.querySelector(`tr[data-key="${key}"]`);
       if(rowEl){
         rowEl.style.transition = "background 0.5s";
-        rowEl.style.backgroundColor = "#fff3cd"; // kuning
+        rowEl.style.backgroundColor = "#fff3cd";
         setTimeout(()=>{ rowEl.style.backgroundColor=""; }, 2500);
       }
     }
@@ -191,15 +195,6 @@ function escapeHtml(s){
   if(!s) return "";
   return String(s).replaceAll("&","&amp;").replaceAll("<","&lt;")
     .replaceAll(">","&gt;").replaceAll('"',"&quot;").replaceAll("'","&#39;");
-}
-
-
-function downloadExcel(){
-  if(hasil.length===0){ alert("Belum ada data."); return; }
-  const ws = XLSX.utils.json_to_sheet(hasil);
-  const wb = XLSX.utils.book_new();
-  XLSX.utils.book_append_sheet(wb, ws, "Rekap");
-  XLSX.writeFile(wb, "rekap_ulangan.xlsx");
 }
 
 /* ---------------- Reset Data ---------------- */
