--- a/uh/play/3/analisis.html
+++ b/uh/play/3/analisis.html
@@ -131,7 +131,7 @@ function renderMapelOptions(){
     if(!aktifMapel.includes(m)){
       opt.disabled = true;
       opt.classList.add("mapel-disabled");
-      opt.textContent = m + " (nonaktif)";
+      opt.textContent = m + " (tidak tersedia)";
     }
     sel.appendChild(opt);
   });
