--- a/uh/play/3/analisis.html
+++ b/uh/play/3/analisis.html
@@ -84,7 +84,7 @@ let soal = {};
 let currentName = "";
 let currentSubject = "";
 const soalURL = "https://oneon360.github.io/web/uh/soal.json";
-const siswaURL = "https://oneon360.github.io/web/uh/play/nama.json";
+const siswaURL = "https://oneon360.github.io/web/doc/soaluji.json";
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
 
 const ALL_MAPEL = ["Pendidikan Pancasila","Bahasa Indonesia","Matematika","IPAS","Seni Rupa"];
