--- a/uh/play/3/analisis.html
+++ b/uh/play/3/analisis.html
@@ -83,8 +83,8 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
 let soal = {};
 let currentName = "";
 let currentSubject = "";
-const soalURL = "https://oneon360.github.io/web/uh/soal.json";
-const siswaURL = "https://oneon360.github.io/web/doc/soaluji.json";
+const soalURL = "https://oneon360.github.io/web/doc/soaluji.json";
+const siswaURL = "https://oneon360.github.io/web/uh/play/nama.json";
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
 
 const ALL_MAPEL = ["Pendidikan Pancasila","Bahasa Indonesia","Matematika","IPAS","Seni Rupa"];
