--- a/uh/play/6b/admin.html
+++ b/uh/play/6b/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -29,17 +28,22 @@
     <!-- Panel Rekap -->
     <div id="rekapPanel" class="d-none">
       
-      <!-- Pengaturan Mapel Aktif di Pindah ke Atas -->
+      <!-- Pengaturan Token -->
+      <h5 class="mt-2">🔑 Token Ujian</h5>
+      <div class="input-group mb-2">
+        <input type="text" id="tokenAdmin" class="form-control" placeholder="Masukkan token ujian">
+        <button class="btn btn-primary" onclick="updateToken()">Simpan Token</button>
+      </div>
+      <div id="currentToken" class="small-muted mb-3"></div>
+
+      <!-- Pengaturan Mapel Aktif -->
       <h5 class="mt-2">⚙️ Pengaturan Mapel Aktif</h5>
       <div id="mapelContent" class="mb-3"></div>
 
       <div class="mb-3">
         <button class="btn btn-success" onclick="fetchData()">🔄 Refresh Data</button>
-
-        <!-- Tombol diarahkan ke Google Sheets -->
         <a href="https://docs.google.com/spreadsheets/d/1BSkTbK-qg_waTLY4QflKVCbR8AWu6Dn76zsDD_Le3-s/edit?gid=1785083120#gid=1785083120" 
-           target="_blank" 
-           class="btn btn-primary ms-2">
+           target="_blank" class="btn btn-primary ms-2">
           📊 Analisis Jawaban
         </a>
       </div>
@@ -52,7 +56,7 @@
 
 <script>
 const ADMIN_PASSWORD = "12345";
-const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
+const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycbyh4wdcw1iJFqs3bymVrSwTCLCUpvvg00bsA-zA23pVnq5-KwYUN1hrzvWL06HVE3Qp/exec";
 
 let hasil = [];
 let prevHasil = [];
@@ -66,11 +70,13 @@ function loginAdmin(){
     document.getElementById("rekapPanel").classList.remove("d-none");
     fetchData();
     fetchMapel();
+    fetchToken();
 
     if(autoRefreshInterval) clearInterval(autoRefreshInterval);
     autoRefreshInterval = setInterval(()=>{
       fetchData();
       fetchMapel();
+      fetchToken();
     }, 10000);
 
   } else {
@@ -280,6 +286,38 @@ async function toggleMapel(mapel){
       renderMapel();
       setDebug(result.message);
     }else alert("Gagal: "+result.message);
+  }catch(err){ alert(err.message); }
+}
+
+/* ---------------- Token Admin ---------------- */
+async function fetchToken(){
+  try {
+    const res = await fetch(WEB_APP_URL+"?action=getToken");
+    const json = await res.json();
+    if(json.status==="success"){
+      document.getElementById("currentToken").textContent = 
+        "Token saat ini: " + (json.token || "(belum diatur)");
+    }
+  }catch(e){ console.error(e); }
+}
+
+async function updateToken(){
+  const newToken = document.getElementById("tokenAdmin").value.trim();
+  if(newToken===""){ alert("Isi token dulu"); return; }
+  try {
+    const res = await fetch(WEB_APP_URL, {
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body: JSON.stringify({action:"setToken", token:newToken})
+    });
+    const result = await res.json();
+    if(result.status==="success"){
+      document.getElementById("currentToken").textContent = 
+        "Token saat ini: " + newToken;
+      alert("Token berhasil diperbarui");
+    } else {
+      alert("Gagal update token: "+result.message);
+    }
   }catch(err){ alert(err.message); }
 }
 </script>
